# sqltesting

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  codecov.yml  mypy.ini  pyproject.toml  pytest.ini.template  tox.ini
.github/: ATHENA_CICD_SETUP.md  BIGQUERY_CICD_SETUP.md  CODEOWNERS  DUCKDB_CICD_SETUP.md  REDSHIFT_CICD_SETUP.md  SNOWFLAKE_CICD_SETUP.md  TRINO_CICD_SETUP.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: athena-integration.yml  bigquery-integration.yml  code-quality.yml  duckdb-integration.yml  format.yaml  publish.yml  redshift-integration.yml  release.yml  snowflake-integration.yml  tests.yaml  trino-integration.yml  unit-tests-simple.yaml  validate-commits.yml  validate-pr-title.yml
docs/: .gitignore  Gemfile  README.md  _config.yml  adapters.md  api-reference.md  examples.md  getting-started.md  index.md  linting.md  mocksmith_integration.md  robots.txt  snowflake-github-actions-migration.md  snowflake-mfa-cicd.md  sql-logging.md  troubleshooting.md
docs/_includes/: head_custom.html
docs/assets/css/: custom.css
examples/: struct_type_example.py
scripts/: coverage.sh  format.sh  lint.sh  manage-redshift-cluster.py  setup-hooks.sh  setup-snowflake-keypair.py  typecheck.sh  validate-athena-setup.py  validate-bigquery-setup.py  validate-duckdb-setup.py  validate-redshift-setup.py  validate-snowflake-setup.py
src/sql_testing_library/: __init__.py  _core.py  _mock_table.py  _pytest_plugin.py  _sql_logger.py  _sql_utils.py  _types.py  core.py  exceptions.py  mock_table.py  pytest_plugin.py  sql_utils.py  types.py
src/sql_testing_library/_adapters/: athena.py  base.py  bigquery.py  redshift.py  snowflake.py  trino.py
src/sql_testing_library/adapters/: __init__.py  athena.py  base.py  bigquery.py  redshift.py  snowflake.py  trino.py
tests/: test_adapters_init_coverage.py  test_athena.py  test_athena_adapter.py  test_athena_adapter_coverage.py  test_athena_physical_tables.py  test_bigquery.py  test_bigquery_adapter.py  test_bigquery_adapter_coverage.py  test_bigquery_adapter_unit.py  test_bigquery_mock_table.py  test_bigquery_physical_tables.py  test_core.py  test_core_backward_compat.py  test_core_extra.py  test_core_framework.py  test_coverage_boost.py  test_direct_imports.py  test_duckdb.py  test_duckdb_adapter_unit.py  test_exceptions.py  test_exceptions_complete_coverage.py  test_imports.py  test_improved_patterns.py  test_main_init_coverage.py  test_mock_table_additional.py  test_mock_table_coverage.py  test_public_api.py  test_pydantic_core_functionality.py  test_pydantic_models_integration.py  test_pytest_plugin.py  test_redshift.py  test_redshift_adapter.py  test_redshift_adapter_coverage.py  test_redshift_physical_tables.py  test_snowflake.py  test_snowflake_adapter.py  test_snowflake_adapter_coverage.py  test_snowflake_physical_tables.py  test_sql_logger.py  test_sql_logger_comprehensive.py  (+10 more)
tests/integration/: README.md  __init__.py  conftest.py  test_athena_integration.py  test_bigquery_integration.py  test_complex_types_integration.py  test_deeply_nested_types_integration.py  test_duckdb_integration.py  test_map_types_integration.py  test_mocksmith_advanced_integration.py  test_mocksmith_integration.py  test_mocksmith_varchar_constraints.py  test_primitive_types_integration.py  test_redshift_integration.py  test_snowflake_integration.py  test_struct_types_integration.py  test_trino_integration.py  test_union_syntax_integration.py
